--- a/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts.WidgetsContainer.cshtml
+++ b/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts.WidgetsContainer.cshtml
@@ -129,8 +129,8 @@
                                                 <div clss="container">
                                                     <div class="row">
                                                         <div class="col-sm-8">
-                                                            <h3 style="display:contents">
-                                                                <a style="margin-left:5px" href="@Url.Action("EditWidget", "Admin", new { area = "Contrib.Widgets", hostId = contentItem.Id, id = widget.Id, returnUrl = ViewContext.RequestContext.HttpContext.Request.Url.PathAndQuery })">@Html.ItemDisplayText(widget) @culture</a>
+                                                            <h3 class="display-content">
+                                                                <a class="margin-left-5" href="@Url.Action("EditWidget", "Admin", new { area = "Contrib.Widgets", hostId = contentItem.Id, id = widget.Id, returnUrl = ViewContext.RequestContext.HttpContext.Request.Url.PathAndQuery })">@Html.ItemDisplayText(widget) @culture</a>
                                                             </h3>
                                                             <span class="contentType">
                                                                 - @widget.TypeDefinition.DisplayName
@@ -140,7 +140,7 @@
                                                             </span>
                                                         </div>
                                                         <div class="col-sm-4">
-                                                            <div class="widget-action" style="float:right">
+                                                            <div class="widget-action float-right">
                                                                 @if (widget.IsPublished) {
                                                                     if (widget.HasDraft) {
                                                                         if (Authorizer.Authorize(Permissions.PublishContent, widget)) {
