--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts.Common.SummaryInfoFor_Edit.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts.Common.SummaryInfoFor_Edit.cshtml
@@ -44,7 +44,7 @@
 <div class="edit-item-info-box-container">
     <div class="row">
         <!-- /.col -->
-        <div class="col-md-6 col-12">
+        <div class="col-md-12 col-lg-6 col-12 custom-width-info-box">
             <div class="info-box">
                 <span class="info-box-icon bg-aqua"><i class="fa fa-cog"></i></span>
 
@@ -70,7 +70,7 @@
         </div>
         <!-- /.col -->
         <!-- .col -->
-        <div class="col-md-6 col-12">
+        <div class="col-md-12 col-lg-6 col-12 custom-width-info-box">
             <div class="info-box">
                 <span class="info-box-icon bg-@statusBackgroundColor"><i class="@statusIconClass"></i></span>
                 <div class="info-box-content">
