--- a/src/Modules/Laser.Orchard.StartupConfig/Views/DateTimeEditorForm.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/DateTimeEditorForm.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Orchard.Core.Common.ViewModels
+@using Orchard;
 @using Orchard.Localization.Models;
 @using Orchard.Localization.Services;
 @using System.Globalization;
@@ -8,26 +9,36 @@
     var timeId = Model._Time.Id;
 
     IDateLocalizationServices dateLocalizationServices = WorkContext.Resolve<IDateLocalizationServices>();
+    IWorkContextAccessor workContextAccessor = WorkContext.Resolve<IWorkContextAccessor>();
 
     var options = new DateLocalizationOptions();
+    options.EnableTimeZoneConversion = false;
 
-    var invariantDate = Convert.ToDateTime(Model._Date.Value + " " + Model._Time.Value, CultureInfo.InvariantCulture);
+    var modelCulture = CultureInfo.GetCultureInfo(Model._Culture.Value);
+    var currentCulture = CultureInfo.GetCultureInfo(workContextAccessor.GetContext().CurrentCulture);
 
-    Model._Date.Value = dateLocalizationServices.ConvertToLocalizedDateString(invariantDate, options);
-    Model._Time.Value = dateLocalizationServices.ConvertToLocalizedTimeString(invariantDate, options);
+    var cultureDate = Convert.ToDateTime(Model._Date.Value + " " + Model._Time.Value, modelCulture);
 
-    //var dtEditor = new DateTimeEditor() {
-    //    Date = dateLocalizationServices.ConvertToLocalizedDateString(invariantDate, options),
-    //    Time = dateLocalizationServices.ConvertToLocalizedTimeString(invariantDate, options),
-    //    ShowDate = true,
-    //    ShowTime = true,
-    //};
+    Model._Date.Value = dateLocalizationServices.ConvertToLocalizedDateString(cultureDate, options);
+    Model._Time.Value = dateLocalizationServices.ConvertToLocalizedTimeString(cultureDate, options);
+
+    Model._Culture.Value = currentCulture;
+
+    Style.Require("jQueryCalendars_Picker");
+    Style.Require("jQueryTimeEntry");
+    Style.Require("jQueryDateTimeEditor");
+
+    Script.Require("jQuery");
+    Script.Require("jQueryCalendars_Picker").AtFoot();
+    Script.Require("JQueryTimeEntry").AtFoot();
+    Script.Require("DateTimeEditorFilter").AtFoot();
 }
 
 
 <div id="@Model.Id">
 
     <label for="@Model._Date.Id">@Model.Title</label>
+    @Display(Model._Culture)
     <span class="date">@Display(Model._Date)</span>
     <span class="time">@Display(Model._Time)</span>
     <span class="hint">@Model.Hint.Text</span>
